# newground

./: .gitignore  .pylintrc  LICENSE.md  Makefile  README.md  aggregate_transformer.py  as_equiv_checker.py  clingo.sh  genMarriages.sh  gringo.sh  idlv.sh  main.py  max-bounds-test_total_time.csv  min-bounds-test_grounding_time.csv  newground.py  newground.sh  noxfile.py  regression_test.py  requirements.txt  setup.cfg  sim-gringo.sh  sim-idlv.sh  sim-newground-idlv.sh  sim-newground.sh  solve-gringo-inst.sh  solve-gringo.sh  solve-idlv-inst.sh  solve-idlv.sh  solve-newground-idlv.sh  solve-newground.sh  start_as_equiv_check.py  start_benchmark_gringo_helper.py  start_benchmark_hybrid_grounding_helper.py  start_benchmark_idlv_helper.py  start_benchmark_limit_virtual_memory.py  start_benchmark_newground_helper.py  start_benchmark_tests.py  start_benchmark_utils.py  start_bounds_benchmark_tests.py  start_hybrid_grounding.py  (+14 more)
benchmark_output/: 01-count-no-body-clique-light-head-3_grounding_size.csv  01-count-no-body-clique-light-head-3_grounding_time.csv  01-count-no-body-clique-light-head-3_total_time.csv  02-02-count-no-body-clique-light-head-9_grounding_size.csv  02-02-count-no-body-clique-light-head-9_grounding_time.csv  02-02-count-rewrite-no-body-clique-light-head-9_grounding_size.csv  02-02-count-rewrite-no-body-clique-light-head-9_grounding_time.csv  02-02-count-rewrite-no-body-clique-light-head-9_total_time.csv  02-count-no-body-clique-light-head-9_grounding_size.csv  02-count-no-body-clique-light-head-9_grounding_time.csv  02-count-rewrite-no-body-clique-light-head-9_total_time.csv  03-count-no-body-clique-heavy-head-3_grounding_size.csv  03-count-no-body-clique-heavy-head-3_grounding_time.csv  03-count-no-body-clique-heavy-head-3_total_time.csv  03-count-rewrite-no-body-clique-heavy-head-3_grounding_size.csv  04-count-no-body-clique-heavy-head-9_grounding_size.csv  04-count-no-body-clique-heavy-head-9_grounding_time.csv  04-count-no-body-clique-heavy-head-9_total_time.csv  04-count-rewrite-no-body-clique-heavy-head-9_grounding_size.csv  05-count-rewrite-clique-light-head-3_grounding_size.csv  05-count-rewrite-light-head-3_grounding_size.csv  05-count-rewrite-light-head-3_grounding_time.csv  05-count-rewrite-light-head-3_total_time.csv  (+87 more)
generators/: genEnergy.py  (+3 more)
(+1882 files in other folders)
