[metadata]
name = newground
version = 0.1.0
description = Body Decoupled Grounding for ASP
author =Viktor Besin, Markus Hecher, Kaan Unalan, Alexander Beiser
email = viktor.besin@tuwien.ac.at, markus.hecher@tuwien.ac.at, kaan.unalan@tuwien.ac.at, alexander.beiser@tuwien.ac.at
long_description = file: README.md, LICENSE.md
url = https://github.com/alexl4123/newground

[options]
packages = find:
python_requires = >= 3.11
install_requires = 
    future-fstrings
    clingo>=5.6.0
    clingox
    networkx

[options.entry_points]
console_scripts =
    newground = newground:main

