[metadata]
name = newground
version = 0.2.0
description = Body Decoupled Grounding for ASP
author =Alexander Beiser, Viktor Besin, Markus Hecher, Kaan Unalan
email = alexander.beiser@tuwien.ac.at, viktor.besin@tuwien.ac.at, markus.hecher@tuwien.ac.at, kaan.unalan@tuwien.ac.at
long_description = file: README.md, LICENSE.md
url = https://github.com/alexl4123/newground

[options]
packages = find:
python_requires = >= 3.11
install_requires = 
    future-fstrings
    clingo>=5.6.2
    clingox
    networkx

[options.extras_require]
doc =
    sphinx==6.2.1
    sphinx_rtd_theme
format =
    nox
    autoflake
    isort
    black
lint_flake8 =
    nox
    flake8 
lint_pylint = 
    nox
    pylint

[options.entry_points]
console_scripts =
    newground = newground:main

